overflow bug fix

--- a/client/css/layouts/projects/projects.scss
+++ b/client/css/layouts/projects/projects.scss
@@ -3,6 +3,7 @@
 	box-sizing: border-box;
 	height: 100%;
 	margin: auto;
+	min-height: 101%;
 	-webkit-overflow-scrolling: touch;
 	overflow-y: auto;
 	padding: 1em;
@@ -62,12 +63,13 @@
 		opacity: 0;
 		overflow-y: auto;
 		pointer-events: none;
-		position: absolute;
+		position: fixed;
 		text-align: center;
 		top: 0;
-		transform: scale(0), translate3d(0, 0, 0);
+		transform: scale(0);
 		transition: opacity $transition, transform $transition;
 		width: 100%;
+		z-index: -1;
 		&::after,
 		section {
 			display: inline-block;
@@ -143,7 +145,7 @@
 			opacity: 1;
 			pointer-events: all;
 			transform: none;
-			z-index: 10;
+			z-index: 2;
 		}
 	}
 }
